--- a/test/.terraformrc
+++ b/test/.terraformrc
@@ -1,6 +1,6 @@
 provider_installation {
   dev_overrides {
-    "AdconnectDevOps/shodan" = "../"
+    "AdconnectDevOps/shodan" = "./terraform-provider-shodan"
   }
   direct {}
 }
