--- a/examples/terraform.tfvars.example
+++ b/examples/terraform.tfvars.example
@@ -1,4 +1,4 @@
-# Shodan API Configuration
+# Copy this file to terraform.tfvars and fill in your actual API key
 shodan_api_key = "your-shodan-api-key-here"
 
 # Environment and team
